--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -2,6 +2,10 @@
     width: 100%;
     position: relative;
 
+    @media screen and (min-width: 1800px) {
+        margin-bottom: 4rem;
+    }
+
     .alpd-video__wrapper {
         height: calc(217px + ((537 - 217) * ((100vw - 320px) / (768 - 320))));
 
@@ -12,7 +16,7 @@
 
     .alpd-video__assets-container {
         position: absolute;
-        top: -12px;
+        top: 5px;
         left: 0;
         width: 100%;
         height: 100%;
@@ -47,18 +51,24 @@
 
         .asset__notebook {
             @media screen and (min-width: 768px) {
-                top: 20%;
+                top: 16%;
+                opacity: .5;
+                filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
                 img {
                     height: calc(440px + ((635 - 420) * ((100vw - 768px) / (1440 - 768))));
                 }
             }
+
+            @media screen and (min-width: 1440px) {
+                top: 9%;
+            }
         }
 
         .asset__backpack {
             @media screen and (min-width: 768px) {
-                top: 50%;
-                right: 0;
+                top: 46%;
+                right: -6px;
                 transform: translateY(-37%);
 
                 img {
@@ -68,15 +78,25 @@
 
             @media screen and (min-width: 1300px) {
                 transform: translateY(-43%);
+                right: 0;
             }
         }
 
         .asset__folder {
             @media screen and (min-width: 768px) {
+                top: -3%;
 
                 img {
-                    width: calc(768px + ((892 - 768) * ((100vw - 768px) / (1440 - 768))));
+                    width: calc(768px + ((1130 - 768) * ((100vw - 768px) / (1440 - 768))));
                 }
+            }
+
+            @media screen and (min-width: 1024px) {
+                top: 0;
+            }
+
+            @media screen and (min-width: 1800px) {
+                top: -3%;
             }
         }
 
@@ -354,7 +374,7 @@
 
             @media screen and (min-width: 1440px) {
                 .alpd-form__paperclip {
-                    top: -45px;
+                    top: -34px;
                     left: 25px;
                 }
             }
