--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -53,8 +53,8 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
           </Fragment>
           <Fragment slot="medications">
             <ul>
-              <li class="item">Calcium and vitamin D supplement daily</li>
-              <li class="item">Reports of daily NSAID use</li>
+              <li class="item">Uses over-the-counter calcium and vitamin D supplements daily (not physician-directed)</li>
+              <li class="item">Reports of self-medicating daily with NSAIDs</li>
             </ul>
           </Fragment>
           <Fragment slot="results">
@@ -86,7 +86,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                 </tr>
                 <tr>
                   <td colspan="2">Alkaline phosphatase, IU/L</td>
-                  <td>63</td>
+                  <td>83</td>
                   <td></td>
                 </tr>
               </tbody>
@@ -375,8 +375,13 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                     />
                   </picture>
                   <div class="patient">
-                    <p>Delayed eruption of permanent teeth</p>
+                    <p>
+                      Delayed eruption of permanent teeth
+                    </p>                    
                   </div>
+                  <p  class="patient--small">
+                    <small>Reproduced with permission from Kiselnikova L, et al. <em>Clin Case Rep.</em> 2020;8(5):911-918.</small>
+                  </p>
                 </div>
               </PinchToZoom>
               <PinchToZoom id="pt-2-image-2" useDefaultButton={false}>
@@ -464,13 +469,12 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                   />
                 </picture>
                 <div class="patient">
-                  <p>Nontraumatic tooth loss at age 4</p>
+                  <p class="patient--color-black">Nontraumatic tooth loss at age 4</p>
                 </div>
               </div>
             </PinchToZoom>
             <p class="pt-3-image-1--permissions">
-              Reproduced with permission from Kiselnikova L, et al. Clinical
-              Case Reports. 2020;8(5):911-918.
+              Reproduced with permission from Kiselnikova L, et al. <em>Clinical Case Reports.</em> 2020;8(5):911-918.
             </p>
           </Fragment>
           <Fragment slot="symptoms">
@@ -509,7 +513,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                 </tr>
                 <tr>
                   <td colspan="2">Protein, g/dL</td>
-                  <td>7.8</td>
+                  <td>7.9</td>
                   <td></td>
                 </tr>
                 <tr>
@@ -557,48 +561,51 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
               </tbody>
             </table>
 
-            <PinchToZoom id="pt-3-image-3" useDefaultButton={false}>
-              <div class="rad__thumbnail" style="max-width: 200px;">
-                <picture>
-                  <button
-                    data-panzoom-action="zoomToFull"
-                    data-content-id="pt-3-image-3"
-                    class="button button--pinch-to-zoom"></button>
-                  <source
-                    srcset="/assets/images/case-files/hannah/hanna-rad-2-desktop.png"
-                    media="(min-width: 768px)"
-                  />
-                  <img
-                    src="/assets/images/case-files/hannah/hanna-rad-2-mobile.png"
-                    alt=""
-                  />
-                </picture>
-                <div class="patient">
-                  <p>Currently presents with mild knock knees</p>
+            <div class="zoom-wrapper">
+              <PinchToZoom id="pt-3-image-3" useDefaultButton={false}>
+                <div class="rad__thumbnail" style="max-width: 200px;">
+                  <picture>
+                    <button
+                      data-panzoom-action="zoomToFull"
+                      data-content-id="pt-3-image-3"
+                      class="button button--pinch-to-zoom"></button>
+                    <source
+                      srcset="/assets/images/case-files/hannah/hanna-rad-2-desktop.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      src="/assets/images/case-files/hannah/hanna-rad-2-mobile.png"
+                      alt=""
+                    />
+                  </picture>
+                  <div class="patient">
+                    <p><span class="zoom-text">Currently presents with </span>mild knock knees</p>
+                  </div>
                 </div>
-              </div>
-            </PinchToZoom>
-            <PinchToZoom id="pt-3-image-2" useDefaultButton={false}>
-              <div class="rad__thumbnail" style="max-width: 200px;">
-                <picture>
-                  <button
-                    data-panzoom-action="zoomToFull"
-                    data-content-id="pt-3-image-2"
-                    class="button button--pinch-to-zoom"></button>
-                  <source
-                    srcset="/assets/images/case-files/hannah/hanna-rad-1-desktop.png"
-                    media="(min-width: 768px)"
-                  />
-                  <img
-                    src="/assets/images/case-files/hannah/hanna-rad-1-mobile.png"
-                    alt=""
-                  />
-                </picture>
-                <div class="patient">
-                  <p>Nontraumatic tooth loss at age 4</p>
+              </PinchToZoom>
+              <PinchToZoom id="pt-3-image-2" useDefaultButton={false}>
+                <div class="rad__thumbnail" style="max-width: 200px;">
+                  <picture>
+                    <button
+                      data-panzoom-action="zoomToFull"
+                      data-content-id="pt-3-image-2"
+                      class="button button--pinch-to-zoom"></button>
+                    <source
+                      srcset="/assets/images/case-files/hannah/hanna-rad-1-desktop.png"
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      src="/assets/images/case-files/hannah/hanna-rad-1-mobile.png"
+                      alt=""
+                    />
+                  </picture>
+                  <div class="patient">
+                    <p class="patient--color-black">Nontraumatic tooth loss at age 4</p>
+                  </div>
                 </div>
-              </div>
-            </PinchToZoom>
+              </PinchToZoom>
+            </div>
+
             <p class="pt-3-image-1--permissions">
               Reproduced with permission from Kiselnikova L, et al. Clinical
               Case Reports. 2020;8(5):911-918.
