--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -115,6 +115,12 @@
         font-size: .875rem;
         line-height: 20px;
 
+        &:first-of-type {
+          @media screen and (max-width: 768px) {
+            text-align: left;
+          }
+        }
+
         &:not(:first-of-type) {
           text-align: center;
           font-family: Barlow, Arial, Helvetica, sans-serif;
@@ -206,6 +212,20 @@
       line-height: 1.3125rem;
       margin-bottom: 1rem
     }
+
+    .patient--small {
+      small {
+        font-weight: 500;
+      }
+    }
+
+    .zoom-wrapper {
+      @media screen and (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   }
 
   [aria-expanded="true"] {
@@ -236,9 +256,6 @@
     padding-right: .75rem;
     padding-left: .75rem;
   }
-
-
-
 
   &__item_title {
     color: $color-black;
