--- a/src/styles/components/_case-file-modal.scss
+++ b/src/styles/components/_case-file-modal.scss
@@ -492,6 +492,9 @@
               padding: 0;
               width: auto !important;
 
+              .patient--zoom {
+                color: red;
+              }
 
               .patient {
                 p {
@@ -629,4 +632,14 @@
     }
   }
 
+}
+
+.fancybox--pinch-to-zoom[aria-hidden="false"] {
+  .zoom-text {
+    display: none;
+  }
+
+  p {
+    text-transform: capitalize;
+  }
 }
