--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -53,6 +53,11 @@
   line-height: 1.3125rem;
   text-align: center;
   margin-bottom: 1rem;
+
+  @media screen and (max-width: 768px) {
+    text-align: left;
+  }
+
 }
 
 .patient__case_files {
