🐛 Fix some content and add utility classes

--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -46,10 +46,11 @@ const internalNavLinks = [
     id="alp-reference-range"
   >
     <div class="wrapper">
-      <h1 class="alp-reference-range__title">tracking down <br class="md:hidden" /> hypophosphatasia</h1>
+      <h1 class="alp-reference-range__title">tracking down <br class="sm:hidden" /> hypophosphatasia</h1>
     </div>
 
     <article class="alp-reference-range__identify-wrapper">
+        <div class="red-string"></div>
       <img
         class="asset__bg asset__bg--back"
         src="/assets/images/identifying-hpp/back-desktop.png"
@@ -90,9 +91,9 @@ const internalNavLinks = [
             </div>
             <div>
               <p class="alp-reference-range__identify-p1">
-                Identify hypophosphatasia with <span class="red-text"
+                Identify hypophosphatasia with <span class="md:color--red"
                   >2 or more low alkaline phosphatase tests</span
-                > in the presence of <br class="hidden md:block" />
+                > in the presence of <br class="hidden xs:block sm:hidden" />
                 <span class="underline-text">clinical signs</span> and symptoms<sup
                   >1*</sup
                 >
@@ -653,7 +654,7 @@ const internalNavLinks = [
           <p class="text--center color--white">
             Assemble a multidisciplinary disease management team to provide
             comprehensive care to your patients with hypophosphatasia.<sup
-              >8,30</sup
+              >30</sup
             >
           </p>
         </section>
@@ -686,7 +687,7 @@ const internalNavLinks = [
     <CTA
       variation="variant-3"
       buttonLabel="Back to Home"
-      content="Don’t let hypophosphatasia go free"
+      content="Don’t let hypophosphatasia GO UNDETECTED"
       linkURL="/"
       bypassModal
     />
