--- a/src/styles/components/_usual-suspects.scss
+++ b/src/styles/components/_usual-suspects.scss
@@ -255,7 +255,7 @@
                 font-family: 'Oswald', sans-serif;
                 font-weight: 600;
                 line-height: 24px;
-
+                text-transform: none;
             }
         }
     }
@@ -452,8 +452,7 @@
 
     .hpp__profile .hpp-multisystemic__tabs {
 
-        &::before {
-        }
+        &::before {}
     }
 
     // .hpp-multisystemic {
