fix: :bug: Update Footer Links

--- a/src/components/Navigation/FooterPrimaryNav.astro
+++ b/src/components/Navigation/FooterPrimaryNav.astro
@@ -4,16 +4,20 @@
       <a class="footer__nav_menu_item_link" href="/">Home</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">ALP Academy</a>
+      <a class="footer__nav_menu_item_link" href="/alp-academy/">ALP Academy</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">HPP Profile</a>
+      <a class="footer__nav_menu_item_link" href="/hpp-profile/">HPP Profile</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="/usual-suspects">Usual Suspects</a>
+      <a class="footer__nav_menu_item_link" href="/usual-suspects/"
+        >Usual Suspects</a
+      >
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="/indentifying-hpp">Identifying HPP</a>
+      <a class="footer__nav_menu_item_link" href="/identifying-hpp/"
+        >Identifying HPP</a
+      >
     </li>
   </ul>
 </nav>
