--- a/src/components/Navigation/FooterSecondaryNav.astro
+++ b/src/components/Navigation/FooterSecondaryNav.astro
@@ -1,7 +1,11 @@
 <nav class="footer__nav">
   <ul class="footer__nav_menu footer__nav_second">
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Legal</a>
+      <a
+        class="footer__nav_menu_item_link"
+        target="_blank"
+        href="https://alexion.com/Legal#legalstatement">Legal</a
+      >
     </li>
     <li class="footer__nav_menu_item">
       <a
@@ -18,7 +22,7 @@
       >
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Site Map</a>
+      <a class="footer__nav_menu_item_link" href="/site-map/">Site Map</a>
     </li>
     <li class="footer__nav_menu_item">
       <a
