feat: :lipstick: Add class to utils to set font-style as italic in a text
Add class to utils to set font-style as italic in a text

--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -243,3 +243,7 @@ $color-value in $colors {
     font-weight: inherit;
     line-height: initial;
 }
+
+.text--italic {
+    font-style: italic;
+}
