--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5323,3 +5323,59 @@
 }
 
 /* ------------------------------- Usual suspects page ------------------------------------------ */
+/* ------------------------------- Site Map page ------------------------------------------ */
+
+.site__map_page {
+
+    .site__map_title {
+        color: $color-white;
+        font-family: "veneer", sans-serif;
+        font-size: 3rem;
+        font-weight: 400;
+        line-height: 56px;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .site__map {
+        display: grid;
+
+        .sitemap__nav {
+
+            &_menu {
+                list-style: none;
+                margin-bottom: 2rem;
+
+                &:last-of-type {
+                    margin-bottom: 4rem;
+                }
+
+                &_item {
+                    padding: 0;
+                    margin-bottom: 1.25rem;
+
+                    &_link {
+                        color: $color-white;
+                        display: inline-block;
+                        font-family: "Oswald", sans-serif;
+                        font-size: 1.125rem;
+                        font-weight: 700;
+                        line-height: 25.2px;
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        transition: color 0.3s ease-in-out;
+
+                        &:hover {
+                            color: $color-red;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+
+
+/* ------------------------------- Site Map page ------------------------------------------ */
